# v13

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: __init__.py  celery.py  constants.py  main.py  pyproject.toml  scrape.py  session.json  tasks.py
app/quotexapi/: __main__.py  api.py  config.py  expiration.py  stable_api.py
app/quotexapi/http/: automail.py  history.py  home.py  login.py  logout.py  navigator.py  profile.py  qxbroker.py
app/quotexapi/utils/: processor.py
app/quotexapi/ws/: client.py
app/quotexapi/ws/channels/: buy.py  candles.py  sell_option.py  ssid.py
app/quotexapi/ws/objects/: candles.py  listinfodata.py  profile.py  timesync.py
app/settings/: config.ini
